# Predictions_API

./: Dockerfile  Makefile  README.md  fitted_scaler.pkl  model_training.ipynb  pyproject.toml  trained_model.pkl
app/: api.py  db.py
test/: conftest.py  test_api.py
