[tool.poetry]
name = "ML-Challenge"
version = "0.0.1"
description = "ml engineering coding challenge"
readme = "README.md"
authors = ["you"]

[tool.poetry.dependencies]
python = "^3.7.1"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
sqlalchemy = "^1.3.18"
requests = "^2.25.1"
numpy = "1.19.3"
sklearn = "^0.0"
keras = "^2.4.3"
runipy = "^0.1.5"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
tensorflow = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.pytest.ini_options]
minversion = "6.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
